--- a/index.html
+++ b/index.html
@@ -7,113 +7,72 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
     <style>
-        .lang-bar {
-            background: #000;
-            padding: 10px;
-            display: flex;
-            gap: 8px;
-            justify-content: center;
-            position: sticky;
-            top: 0;
-            z-index: 999;
-        }
-        .lang-btn {
-            cursor: pointer;
-            border: 1px solid #ffd600;
-            background: transparent;
-            color: #ffd600;
-            padding: 6px 12px;
-            border-radius: 4px;
-            font-weight: bold;
-        }
-        .lang-btn:hover {
-            background: #ffd600;
-            color: #000;
-        }
-        #mainApp {
-            opacity: 0.1;
-            pointer-events: none;
-            transition: 0.5s;
-            border-top: 2px solid #01579b;
-            margin-top: 20px;
-        }
-        .report-box {
-            background: #fff;
-            color: #000;
-            padding: 20px;
-            border: 2px solid #01579b;
-            border-radius: 8px;
-            margin-top: 15px;
-        }
-        .disclaimer {
-            font-size: 12px;
-            opacity: 0.8;
-            margin-top: 10px;
-        }
+        .lang-bar { background:#000; padding:10px; display:flex; gap:8px; justify-content:center; position:sticky; top:0; z-index:999; }
+        .lang-btn { cursor:pointer; border:1px solid #ffd600; background:transparent; color:#ffd600; padding:6px 12px; border-radius:4px; font-weight:bold; }
+        .lang-btn:hover { background:#ffd600; color:#000; }
+        #mainApp { opacity:0.1; pointer-events:none; transition:0.5s; border-top:2px solid #01579b; margin-top:20px; }
+        .report-box { background:#fff; color:#000; padding:20px; border:2px solid #01579b; border-radius:8px; margin-top:15px; }
+        .note { font-size:12px; opacity:0.8; }
     </style>
 </head>
 <body>
 
-    <div class="lang-bar">
-        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
-        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
-        <button class="lang-btn" onclick="setLang('fr')">FR 🇫🇷</button>
-        <button class="lang-btn" onclick="setLang('pt')">PT 🇧🇷</button>
-        <button class="lang-btn" onclick="setLang('zh')">ZH 🇨🇳</button>
-    </div>
+<div class="lang-bar">
+    <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
+    <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
+    <button class="lang-btn" onclick="setLang('fr')">FR 🇫🇷</button>
+    <button class="lang-btn" onclick="setLang('pt')">PT 🇧🇷</button>
+    <button class="lang-btn" onclick="setLang('zh')">ZH 🇨🇳</button>
+</div>
 
-    <section id="accessSection">
-        <h2 id="t_act">1. Service Activation</h2>
-        <input type="text" id="awbField" placeholder="AWB / Loading Reference">
-        <select id="priceSelect">
-            <option value="35">Basic Review - $35</option>
-            <option value="120">Premium Integral Advisory - $120</option>
-        </select>
-        <button id="activateBtn" style="width:100%; background:#01579b; color:white; font-weight:bold;">
-            ACTIVATE ADVISOR
+<section id="accessSection">
+    <h2 id="t_act">1. Service Activation</h2>
+    <input type="text" id="awbField" placeholder="AWB / Loading Reference">
+    <select id="priceSelect">
+        <option value="35">Basic Review - $35</option>
+        <option value="120">Premium Integral Advisory - $120</option>
+    </select>
+    <button id="activateBtn" style="width:100%; background:#01579b; color:white; font-weight:bold;">
+        ACTIVATE ADVISOR
+    </button>
+</section>
+
+<section id="mainApp">
+    <h2 id="t_sol">2. Solution Center</h2>
+
+    <p id="p_desc">
+        Upload photos of cargo, labels, AWB, delivery order or documents.
+        <strong>Images are inspected first.</strong>
+        Text is optional and used as support.
+    </p>
+
+    <form id="advForm">
+        <textarea name="prompt" id="promptArea"
+            placeholder="Optional: add context or ask a follow-up question"></textarea>
+
+        <label>Inspection Photos (Max 3):</label>
+        <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
+
+        <button type="submit" style="width:100%; background:#2e7d32; color:white;">
+            GENERATE ACTION PLAN
         </button>
-    </section>
+    </form>
 
-    <section id="mainApp">
-        <h2 id="t_sol">2. Solution Center</h2>
+    <p class="note">
+        Private technical advisory. Not a legal authority. No cargo handling.
+    </p>
 
-        <p id="p_desc">
-            Describe the technical issue or upload up to 3 photos.
-            <strong>Photos are the main inspection engine.</strong>
-            You will receive a practical action plan, not a legal verdict.
-        </p>
+    <div id="advResponse"></div>
 
-        <form id="advForm">
-            <textarea
-                name="prompt"
-                id="promptArea"
-                placeholder="How can we help you move your cargo safely?"
-                required></textarea>
+    <div id="actionBtns" style="display:none; margin-top:20px; display:flex; gap:10px;">
+        <button onclick="downloadPDF()" style="flex:1;">📄 PDF</button>
+        <button onclick="shareWA()" style="flex:1; background:#25d366; color:white;">WhatsApp</button>
+    </div>
+</section>
 
-            <label>Inspection Photos (Max 3):</label>
-            <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-
-            <button type="submit" style="width:100%; background:#2e7d32; color:white;">
-                GENERATE ACTION PLAN
-            </button>
-        </form>
-
-        <div class="disclaimer">
-            Private technical advisory. We are not IATA, TSA, DOT, DG, or any government authority.
-            We do not handle or approve cargo. This is guidance to avoid delays and losses.
-        </div>
-
-        <div id="advResponse"></div>
-
-        <div id="actionBtns" style="display:none; margin-top:20px; display:flex; gap:10px;">
-            <button onclick="downloadPDF()" style="flex:1;">📄 PDF</button>
-            <button onclick="shareWA()" style="flex:1; background:#25d366; color:white;">WhatsApp</button>
-        </div>
-    </section>
-
-    <script src="app.js"></script>
-    <script src="legal_warning.js"></script>
-    <script src="standards.js"></script>
+<script src="app.js"></script>
+<script src="legal_warning.js"></script>
+<script src="standards.js"></script>
 
 </body>
 </html>
