--- a/index.html
+++ b/index.html
@@ -1,69 +1,97 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartCargo Advisor 360° | MAY ROGA LLC</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
-    <style>
-        :root { --blue: #01579b; --gold: #ffd600; }
-        .lang-bar { background: #000; padding: 10px; display: flex; gap: 8px; justify-content: center; position: sticky; top: 0; z-index: 999; }
-        .lang-btn { cursor: pointer; border: 1px solid var(--gold); background: transparent; color: var(--gold); padding: 6px 12px; border-radius: 4px; font-weight: bold; }
-        .mission-box { background: #e3f2fd; border-left: 5px solid var(--blue); padding: 15px; margin: 20px 0; color: #000; }
-        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; font-size: 0.85em; margin: 20px 0; }
-        #mainApp { opacity: 0.1; pointer-events: none; transition: 0.5s; border-top: 3px solid var(--blue); margin-top: 20px; }
-        .report-box { background: #fff; color: #000; padding: 25px; border: 2px solid var(--blue); border-radius: 8px; }
-        #timerBox { display: none; text-align: center; color: red; font-weight: bold; padding: 10px; border: 1px solid red; margin-bottom: 10px; }
-    </style>
-</head>
-<body>
-    <div class="lang-bar">
-        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
-        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
-    </div>
+const translations = {
+    en: {
+        act: "1. Service Activation",
+        sol: "2. Solution Center",
+        m_title: "Why SmartCargo?",
+        m_desc: "We provide stability to the entire logistics chain. We prevent fines and holds so the paying customer never loses money.",
+        l_title: "⚠️ Legal Shield",
+        l_desc: "We are PRIVATE ADVISORS. Not IATA/TSA/DOT. We provide technical solutions; we don't certify DG or handle cargo."
+    },
+    es: {
+        act: "1. Activación de Servicio",
+        sol: "2. Centro de Soluciones",
+        m_title: "¿Por qué SmartCargo?",
+        m_desc: "Damos estabilidad a toda la cadena logística. Evitamos multas y retenciones para que el cliente que paga nunca pierda dinero.",
+        l_title: "⚠️ Blindaje Legal",
+        l_desc: "Somos ASESORES PRIVADOS. No somos IATA/TSA/DOT. Damos soluciones técnicas; no certificamos carga peligrosa ni manipulamos carga."
+    }
+};
 
-    <header style="text-align: center;">
-        <h1>SmartCargo ADVISORY</h1>
-        <p>Technical Consulting by <strong>MAY ROGA LLC</strong></p>
-    </header>
+let timer;
 
-    <div class="mission-box">
-        <h3 id="m_title">Why SmartCargo?</h3>
-        <p id="m_desc">We provide stability to the entire logistics chain. From Shippers and Forwarders to Drivers and Operators, our system ensures everyone can verify cargo status. <strong>We prevent fines, holds, and returns</strong> so the paying customer never loses money.</p>
-    </div>
+function setLang(lang) {
+    localStorage.setItem("user_lang", lang);
+    const t = translations[lang] || translations.en;
+    document.getElementById("t_act").innerText = t.act;
+    document.getElementById("t_sol").innerText = t.sol;
+    document.getElementById("m_title").innerText = t.m_title;
+    document.getElementById("m_desc").innerText = t.m_desc;
+    document.getElementById("l_title").innerText = t.l_title;
+    document.getElementById("l_desc").innerText = t.l_desc;
+}
 
-    <div class="shield-box">
-        <h4 id="l_title">⚠️ Legal Shield / Blindaje Legal</h4>
-        <p id="l_desc">We are PRIVATE ADVISORS. We are NOT IATA, TSA, DOT, or government regulators. We provide technical solutions to prevent delays; we do not certify dangerous goods and we do not touch or handle cargo.</p>
-    </div>
+function unlock() {
+    document.getElementById("mainApp").style.opacity = "1";
+    document.getElementById("mainApp").style.pointerEvents = "all";
+    document.getElementById("accessSection").style.display = "none";
+}
 
-    <section id="accessSection">
-        <h2 id="t_act">1. Service Activation</h2>
-        <input type="text" id="awbField" placeholder="AWB / Loading Reference">
-        <select id="priceSelect">
-            <option value="35">Micro/Basic Load - $35</option>
-            <option value="120">Premium Integral Audit - $120</option>
-        </select>
-        <button id="activateBtn" style="width:100%; background:var(--blue); color:white; font-weight:bold;">ACTIVATE ADVISOR</button>
-    </section>
+document.addEventListener("DOMContentLoaded", () => {
+    setLang(localStorage.getItem("user_lang") || "en");
 
-    <section id="mainApp">
-        <div id="timerBox">🔒 PRIVACY: Info wipes in <span id="secs">300</span>s</div>
-        <h2 id="t_sol">2. Solution Center</h2>
-        <form id="advForm">
-            <textarea name="prompt" id="promptArea" placeholder="Describe the issue or upload photos..." required></textarea>
-            <label>Inspection Photos (Max 3):</label>
-            <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-            <button type="submit" style="width:100%; background:#2e7d32; color:white; font-weight:bold;">GENERATE ACTION PLAN</button>
-        </form>
-        <div id="advResponse"></div>
-        <div id="actionBtns" style="display:none; margin-top:20px; gap:10px;">
-            <button onclick="downloadPDF()" style="flex:1;">📄 Download PDF</button>
-            <button onclick="shareWA()" style="flex:1; background:#25d366; color:white;">Share WhatsApp</button>
-        </div>
-    </section>
+    const params = new URLSearchParams(window.location.search);
+    if (params.get("access") === "granted" || localStorage.getItem("sc_auth") === "true") {
+        localStorage.setItem("sc_auth", "true");
+        unlock();
+    }
 
-    <script src="app.js"></script>
-</body>
-</html>
+    document.getElementById("activateBtn").onclick = async () => {
+        const awb = document.getElementById("awbField").value || "N/A";
+        const amt = document.getElementById("priceSelect").value;
+        const user = prompt("ADMIN USER:");
+        const pass = prompt("ADMIN PASS:");
+
+        const fd = new FormData();
+        fd.append("awb", awb); fd.append("amount", amt);
+        if(user) fd.append("user", user); if(pass) fd.append("password", pass);
+
+        const res = await fetch(`/create-payment`, { method: "POST", body: fd });
+        const data = await res.json();
+        if(data.url) window.location.href = data.url;
+    };
+
+    document.getElementById("advForm").onsubmit = async (e) => {
+        e.preventDefault();
+        const out = document.getElementById("advResponse");
+        out.innerHTML = "<h4>🔍 Analyzing technical solutions...</h4>";
+       
+        const fd = new FormData(e.target);
+        fd.append("lang", localStorage.getItem("user_lang") || "en");
+
+        const res = await fetch(`/advisory`, { method: "POST", body: fd });
+        const data = await res.json();
+        const curLang = localStorage.getItem("user_lang") || "en";
+       
+        out.innerHTML = `
+            <div id="finalReport" class="report-box">
+                <h3 style="color:#01579b; border-bottom:2px solid #ffd600;">TACTICAL ACTION PLAN</h3>
+                <p style="white-space: pre-wrap;">${data.data}</p>
+                <hr>
+                <p style="font-size:0.7em; color:gray;"><strong>Legal Notice:</strong> ${translations[curLang].l_desc}</p>
+            </div>`;
+        document.getElementById("actionBtns").style.display = "flex";
+
+        // Iniciar cronómetro de privacidad
+        document.getElementById("timerBox").style.display = "block";
+        let timeLeft = 300;
+        clearInterval(timer);
+        timer = setInterval(() => {
+            timeLeft--;
+            document.getElementById("secs").innerText = timeLeft;
+            if(timeLeft <= 0) location.reload();
+        }, 1000);
+    };
+});
+
+function downloadPDF() { html2pdf().from(document.getElementById("finalReport")).save("SmartCargo_Report.pdf"); }
+function shareWA() { window.open(`https://wa.me/?text=${encodeURIComponent(document.getElementById("finalReport").innerText)}`, '_blank'); }
